force-app/main/default/objects/Queue_Ids__c/Queue_Ids__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Queue Ids</label>
</CustomObject>