force-app/main/default/objects/Queue_Ids__c/fields/AMERICAS_Lead_Queue__c.field-meta.xml
<CustomField>
    <fullName>AMERICAS_Lead_Queue__c</fullName>
    <label>AMERICAS Lead Queue</label>
    <length>15</length>
    <type>Text</type>
</CustomField>