force-app/main/default/objects/Queue_Ids__c/fields/AML_Queue__c.field-meta.xml
<CustomField>
    <fullName>AML_Queue__c</fullName>
    <label>AML Queue</label>
    <length>15</length>
    <type>Text</type>
</CustomField>