force-app/main/default/objects/Queue_Ids__c/fields/APAC_Lead_Queue__c.field-meta.xml
<CustomField>
    <fullName>APAC_Lead_Queue__c</fullName>
    <label>APAC Lead Queue</label>
    <length>15</length>
    <type>Text</type>
</CustomField>