force-app/main/default/objects/Queue_Ids__c/fields/EFT_Settlement__c.field-meta.xml
<CustomField>
    <fullName>EFT_Settlement__c</fullName>
    <label>EFT Settlement</label>
    <length>15</length>
    <type>Text</type>
</CustomField>