force-app/main/default/objects/Queue_Ids__c/fields/EMEA_Lead_Queue__c.field-meta.xml
<CustomField>
    <fullName>EMEA_Lead_Queue__c</fullName>
    <label>EMEA Lead Queue</label>
    <length>15</length>
    <type>Text</type>
</CustomField>