force-app/main/default/objects/Queue_Ids__c/fields/Finance_Queue__c.field-meta.xml
<CustomField>
    <fullName>Finance_Queue__c</fullName>
    <label>Finance Queue</label>
    <length>15</length>
    <type>Text</type>
</CustomField>