force-app/main/default/objects/Queue_Ids__c/fields/Global_Service_Desk_Level_2__c.field-meta.xml
<CustomField>
    <fullName>Global_Service_Desk_Level_2__c</fullName>
    <label>Global Service Desk Level 2</label>
    <length>15</length>
    <type>Text</type>
</CustomField>