force-app/main/default/objects/Queue_Ids__c/fields/Legal_Queue__c.field-meta.xml
<CustomField>
    <fullName>Legal_Queue__c</fullName>
    <label>Legal Queue</label>
    <length>15</length>
    <type>Text</type>
</CustomField>