force-app/main/default/objects/Queue_Ids__c/fields/Referral_Queue__c.field-meta.xml
<CustomField>
    <fullName>Referral_Queue__c</fullName>
    <label>Referral Queue</label>
    <length>15</length>
    <type>Text</type>
</CustomField>